@@ -30,6 +30,9 @@ Color fig_default_colors[FIG_MAX_DEFAULT_COLORS] =
   { 0x7f, 0x30, 0x00}, {0xa1, 0x3f, 0x00}, {0xbf, 0x61, 0x00}, {0xff, 0x7f, 0x7f},
   { 0xff, 0xa1, 0xa1}, {0xff, 0xbf, 0xbf}, {0xff, 0xe1, 0xe1}, {0xff, 0xd7, 0x00}};
 
+/** These are the "old-name" font names corresponding to the XFig standard
+ *  fonts.  See the list in font.c.
+ */
 char *fig_fonts[] =
 {
   "Times-Roman",
